fixed modal jump bug, added popups to markers

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -72,6 +72,53 @@
     font-size: 1.3em;
 }
 
-.pac-container {
+.pac-container 
+{
     z-index: 1041 !important;
+}
+
+.popup 
+{
+    text-align:center;
+}
+
+.popup .slideshow .image        
+{ 
+    display:none; 
+}
+
+.popup .slideshow .image.active 
+{ 
+    display:block; 
+}
+
+.popup .slideshow img 
+{
+    width:100%;
+}
+
+.popup .slideshow .caption 
+{
+    background:#eee;
+    padding:10px;
+}
+
+.popup .cycle 
+{
+    padding:10px 0 20px;
+}
+
+.popup .cycle a.prev 
+{ 
+    float:left; 
+}
+
+.popup .cycle a.next 
+{ 
+    float:right; 
+}
+
+.leaflet-popup-tip
+{
+    display: none;  /* for now I dunno what is wrong with it... */
 }
